--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -5,3 +5,20 @@
 #spin {
   display: none;
 }
+.tiles{
+  border: 1px solid black;
+}
+.tiles, .blankSpace{
+  padding: 20px;
+  margin: 0.8%;
+  width: 5%;
+  display: inline-block;
+  text-align: center;
+  font-size: 3.3em;
+  padding-left: 5px;
+  line-height: 12px;
+  letter-spacing: 0px; }
+
+#displayBoard{
+  width:80%;
+}
