--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,4 +1,6 @@
-
+body{
+  background: black;
+}
 
 .jumbotron{
   background-color: lightblue;
@@ -16,6 +18,8 @@
 }
 .tiles{
   border: 1px solid black;
+  box-shadow: 2px 3px 4px 1px black;
+  background: white;
 }
 .tiles, .blankSpace{
   padding: 20px;
@@ -33,4 +37,39 @@
 }
 .addBorder{
   border: 4px solid black;
+}
+#displayBoard{
+  background: url('../img/board1.jpg');
+  width: 1000px;
+  text-align: center;
+  height: 400px;
+  transform: skewX(1deg);
+  transform: skewY(2deg);
+  transform: rotateZ(5deg);
+}
+#playersAvatars{
+  position: fixed;;
+  bottom: 0;
+  right: 100px;;
+  margin-bottom: -500px;
+}
+#playersAvatars div{
+  display: inline-block;
+  right: 0px;
+}
+.translateAvatars{
+  transform: translate(0,-460px);
+  transition: all 2s;
+}
+.avatar {
+  height: 200px;
+}
+.avatar{
+  bottom: 101px;
+  position: relative;
+  right: 57%;
+  z-index: -1
+}
+.podium{
+  margin-top: 100px;
 }
