--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -41,7 +41,7 @@ body{
   border: 4px solid black;
 }
 #displayBoard{
-  background: url('../img/background.jpg');
+  background: url('../img/board3.jpg');
   width: 1000px;
   text-align: center;
   height: 400px;
@@ -61,7 +61,7 @@ body{
 }
 .translateAvatars{
   transform: translate(0,-460px);
-  transition: all 2s;
+  transition: all 9s;
 }
 .avatar {
   height: 200px;
