--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -2,8 +2,8 @@ body{
   background: black;
   background-attachment: fixed;
   background-size: cover;
+  color:white;
 }
-
 .jumbotron{
   background-color: lightblue;
   border-bottom: 5px solid darkblue;
@@ -34,8 +34,13 @@ body{
   line-height: 12px;
   letter-spacing: 0px; }
 
-#displayBoard{
-  width:80%;
+#displayBoard h2, #clue{
+  width:30%;
+  color:white;
+  font-size: 20px;
+  font-weight: bolder;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
 }
 .addBorder{
   border: 4px solid black;
@@ -48,6 +53,7 @@ body{
   transform: skewX(1deg);
   transform: skewY(2deg);
   transform: rotateZ(5deg);
+  color:black;
 }
 #playersAvatars{
   position: fixed;;
@@ -90,5 +96,26 @@ body{
   font-size: 2em;
 }
 .hef{
-height: 330px;
+  height: 330px;
+}
+#sidebar{
+  position: absolute;
+  top: 0;
+  left:0;
+  height: 100%;
+  background: slategrey;
+  color: white;
+  border: none;
+  z-index: 99;
+  margin-top: 215px;
+  padding-top: 75px;
+  border: 5px solid darkblue;
+  width: 300px;
+}
+#mainDisplay{
+  margin-left:30%;
+  position: absolute;
+}
+.container{
+  margin-left: 30%
 }
