--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,13 +1,15 @@
-body{
+body {
   background: black;
   background-attachment: fixed;
   background-size: cover;
   color:white;
 }
-.jumbotron{
+
+.jumbotron {
   background-color: lightblue;
   border-bottom: 5px solid darkblue;
 }
+
 .jumbotron h1 {
   font-size: 80px;
   font-family: impact;
@@ -15,15 +17,18 @@ body{
   color: white;
   text-shadow: 0 0 10px darkblue;
 }
+
 .selected {
   color: green;
 }
-.tiles{
+
+.tiles {
   border: 1px solid black;
   box-shadow: 2px 3px 4px 1px black;
   background: white;
 }
-.tiles, .blankSpace{
+
+.tiles, .blankSpace {
   padding: 20px;
   margin: 0.8%;
   width: 5%;
@@ -32,9 +37,42 @@ body{
   font-size: 3.3em;
   padding-left: 5px;
   line-height: 12px;
-  letter-spacing: 0px; }
+  letter-spacing: 0px; 
+}
 
-#displayBoard h2, #clue{
+.addBorder {
+  border: 4px solid black;
+}
+
+.translateAvatars {
+  transform: translate(0,-460px);
+  transition: all 9s;
+}
+
+.avatar {
+  height: 200px;
+}
+
+.avatar {
+  bottom: 101px;
+  position: relative;
+  right: 57%;
+  z-index: -1
+}
+
+.podium {
+  margin-top: 100px;
+}
+
+.container {
+  margin-left: 30%
+}
+
+.hef {
+  height: 330px;
+}
+
+#displayBoard h2, #clue {
   width:30%;
   color:white;
   font-size: 20px;
@@ -42,10 +80,8 @@ body{
   background-color: rgba(0, 0, 0, 0.5);
   margin: 0 auto;
 }
-.addBorder{
-  border: 4px solid black;
-}
-#displayBoard{
+
+#displayBoard {
   background: url('../img/board3.jpg');
   width: 1000px;
   text-align: center;
@@ -55,50 +91,36 @@ body{
   transform: rotateZ(5deg);
   color:black;
 }
-#playersAvatars{
+
+#playersAvatars {
   position: fixed;;
   bottom: 0;
   right: 100px;;
   margin-bottom: -500px;
 }
-#playersAvatars div{
+
+#playersAvatars div {
   display: inline-block;
   right: 0px;
 }
-.translateAvatars{
-  transform: translate(0,-460px);
-  transition: all 9s;
-}
-.avatar {
-  height: 200px;
-}
-.avatar{
-  bottom: 101px;
-  position: relative;
-  right: 57%;
-  z-index: -1
-}
-.podium{
-  margin-top: 100px;
-}
-#player-one, #player-two{
+
+#player-one, #player-two {
   position: relative;
   top: 223px;
   left: 52px;
   color: white;
   font-size: 2em;
 }
-#player-one-score, #player-two-score{
+
+#player-one-score, #player-two-score {
   position: relative;
   top: 253px;
   left: 52px;
   color: white;
   font-size: 2em;
 }
-.hef{
-  height: 330px;
-}
-#sidebar{
+
+#sidebar {
   position: absolute;
   top: 0;
   left:0;
@@ -112,10 +134,8 @@ body{
   border: 5px solid darkblue;
   width: 300px;
 }
-#mainDisplay{
+
+#mainDisplay {
   margin-left:30%;
   position: absolute;
-}
-.container{
-  margin-left: 30%
 }
