refactored entire front end with one master function that changes turns and takes both players as arguments interchangeably. optimatl performance so far, still has scoring issues on second round

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -292,3 +292,6 @@ font-size: 3em;
                4px 4px 30px rgba(210, 25, 16, 0.4),
                4px 4px 40px rgba(210, 15, 06, 0.4);
 }
+canvas{
+  z-index: 99999;
+}
