--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -30,6 +30,7 @@ h1{
   border: 1px solid black;
   box-shadow: 2px 3px 4px 1px black;
   background: white;
+  vertical-align: top;
 }
 
 .tiles, .blankSpace {
@@ -42,6 +43,7 @@ h1{
   padding-left: 5px;
   line-height: 12px;
   letter-spacing: 0px;
+  vertical-align: top;
 }
 
 .addBorder {
