tile background change

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -170,7 +170,7 @@ font-size: 3em;
 }
 
 #displayBoard {
-  background: url('../img/board4.jpg');
+  background: url('../img/board4.png');
   width: 1200px;
   text-align: center;
   height: 500px;
